# PrettyConsole

./: .gitignore  ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Makefile  MyString.cpp  MyString.h  PrettyConsole  PrettyConsole.cpp  PrettyConsole.h  PrettyConsole.sln  PrettyConsoleLib.vcxproj  PrettyConsoleLib.vcxproj.filters  README.md  ScreenComponent.h  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  algTest.py  build.bat  build.sh  cmake_install.cmake  console.cpp  console.h  line.cpp  line.h  point.cpp  point.h  readme.md  rectangle.cpp  rectangle.h  row.cpp  row.h  screenComponent.cpp  screenComponent.h  styleAttribute.cpp  styleAttribute.h  styles.cpp  styles.h
include/: PrettyConsole.h  console.h  inputHandler.h  keyboardMap.h  line.h  rectangle.h
src/: PrettyConsole.cpp  console.cpp  inputHandler.cpp  point.cpp  row.cpp  screenComponent.cpp  styles.cpp
